# piper

./: .dir-locals.el  .gitignore  ARCHITECTURE.md  Cargo.toml  GRAMMAR.md  README.md  bleh.org  checklist.org  checklist2.org  flake.nix  notes.org  test.org
book/: book.toml
book/src/: intro-to-scheme.md
examples/hello_pipeline/: .piperConfig.scm  main.scm
src/: bindings.rs  config.rs  debug_utils.rs  derivation_graph.rs  derivation_runner.rs  main.rs  process.rs  vm.rs
src/bindings/: polarstype.rs
src/derivation_graph/: derivation.rs  derivation_runner.rs
src/derivation_graph/derivation/: dataframe.rs  evaluator.rs  file.rs  iterator.rs  output.rs  process.rs  test.rs
src/derivation_graph/derivation/process/: scriptstring.rs
src/process/: derivation.rs  derivation_runner.rs
src/process/derivation/: evaluator.rs  scriptstring.rs
src/steel-modules/: #process.scm#  DESIGN.md  derivation.scm  main.scm  process.scm
src/steel-modules/config/: defaults.scm  main.scm
src/steel-modules/tests/: basic_interpolations.scm  node_interpolation.scm
src/vm/: convenience_functions.rs  tester_functions.rs
