[package]
name = "piper"
version = "0.1.0"
edition = "2024"

[dependencies]
daggy = "0.9.0"
regex = "1.11.2"
steel-core = { git="https://github.com/mattwparas/steel.git", branch = "master" }
steel-repl = { git="https://github.com/mattwparas/steel.git", branch = "master" }
steel-derive = { git="https://github.com/mattwparas/steel.git", branch = "master" }
